# pmp-library

./: CMakeLists.txt
src/pmp/: CMakeLists.txt
src/pmp/algorithms/: remeshing.cpp  remeshing.h
